feat(server): add Drizzle ORM with D1 database and initial migration

--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -1,15 +1,23 @@
 {
-	"name": "server",
-	"scripts": {
-		"dev": "wrangler dev",
-		"deploy": "wrangler deploy --minify",
-		"cf-typegen": "wrangler types --env-interface CloudflareBindings"
-	},
-	"dependencies": {
-		"hono": "^4.7.4"
-	},
-	"devDependencies": {
-		"@cloudflare/workers-types": "^4.20250303.0",
-		"wrangler": "^3.114.0"
-	}
+  "name": "server",
+  "scripts": {
+    "dev": "wrangler dev",
+    "deploy": "wrangler deploy --minify",
+    "cf-typegen": "wrangler types --env-interface CloudflareBindings",
+	"db:generate": "drizzle-kit generate --name",
+    "db:migrate:dev": "wrangler d1 migrations apply mixer-exp --local",
+    "db:migrate:prod": "wrangler d1 migrations apply mixer-exp --remote",
+    "db:local:studio": "drizzle-kit studio"
+  },
+  "dependencies": {
+    "better-sqlite3": "^11.8.1",
+    "drizzle-orm": "^0.40.0",
+    "hono": "^4.7.4"
+  },
+  "devDependencies": {
+    "@cloudflare/workers-types": "^4.20250303.0",
+    "@types/node": "^22.13.9",
+    "drizzle-kit": "^0.30.5",
+    "wrangler": "^3.114.0"
+  }
 }
