--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -3,20 +3,27 @@
   "scripts": {
     "dev": "wrangler dev",
     "deploy": "wrangler deploy --minify",
+    "typecheck": "tsc --noEmit",
     "cf-typegen": "wrangler types --env-interface CloudflareBindings",
-	"db:generate": "drizzle-kit generate --name",
+    "db:generate": "drizzle-kit generate --name",
     "db:migrate:dev": "wrangler d1 migrations apply mixer-exp --local",
     "db:migrate:prod": "wrangler d1 migrations apply mixer-exp --remote",
-    "db:local:studio": "drizzle-kit studio"
+    "db:local:drop": "drizzle-kit drop",
+    "db:local:studio": "drizzle-kit studio",
+    "auth:generate": "pnpx @better-auth/cli generate --config auth.config.ts --output src/db/auth-schema.ts"
+
   },
   "dependencies": {
+    "@miniflare/d1": "^2.14.4",
+    "@miniflare/shared": "^2.14.4",
+    "better-auth": "^1.2.3",
     "better-sqlite3": "^11.8.1",
     "drizzle-orm": "^0.40.0",
     "hono": "^4.7.4"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20250303.0",
-    "@types/node": "^22.13.9",
+    "@types/node": "^22.13.10",
     "drizzle-kit": "^0.30.5",
     "wrangler": "^3.114.0"
   }
