--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@repo/ui": "workspace:*",
+    "better-auth": "^1.2.3",
     "next": "^15.2.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
