--- a/apps/server/wrangler.jsonc
+++ b/apps/server/wrangler.jsonc
@@ -20,6 +20,12 @@
 
     },
   ],
+  "routes": [
+    {
+      "pattern": "api.f-stack.dev",
+      "custom_domain": true
+    }
+  ]
   /**
    * Smart Placement
    * Docs: https://developers.cloudflare.com/workers/configuration/smart-placement/#smart-placement
