--- a/apps/server/wrangler.jsonc
+++ b/apps/server/wrangler.jsonc
@@ -16,21 +16,20 @@
       "binding": "DB",
       "database_name": "mixer-exp",
       "database_id": "b2212846-ac5b-4be2-b6f9-d7562c019eec",
-      "migrations_dir": "src/db/migrations"
-
+      "migrations_dir": "src/db/migrations",
     },
   ],
   "routes": [
     {
       "pattern": "api.f-stack.dev",
-      "custom_domain": true
-    }
-  ]
+      "custom_domain": true,
+    },
+  ],
   /**
    * Smart Placement
    * Docs: https://developers.cloudflare.com/workers/configuration/smart-placement/#smart-placement
    */
-  // "placement": { "mode": "smart" },
+  "placement": { "mode": "smart" },
 
   /**
    * Bindings
