--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -1,5 +1,6 @@
 {
   "name": "server",
+  "types": "./types.ts",
   "scripts": {
     "dev": "wrangler dev",
     "deploy": "wrangler deploy --minify",
