--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -14,6 +14,7 @@
     "@tanstack/react-router-devtools": "^1.120.15",
     "@tanstack/react-start": "^1.120.15",
     "better-auth": "^1.2.8",
+    "hono": "^4.7.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "redaxios": "^0.5.1",
