--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -14,6 +14,7 @@
     "auth:generate": "pnpx @better-auth/cli generate --config auth.config.ts --output src/db/auth-schema.ts"
   },
   "dependencies": {
+    "@hono/zod-validator": "^0.7.0",
     "@miniflare/d1": "^2.14.4",
     "@miniflare/shared": "^2.14.4",
     "better-auth": "^1.2.3",
