--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -9,7 +9,9 @@
     "start": "vinxi start"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.2.3",
     "@t3-oss/env-core": "^0.13.6",
+    "@tailwindcss/postcss": "^4.1.8",
     "@tanstack/react-router": "^1.120.15",
     "@tanstack/react-router-devtools": "^1.120.15",
     "@tanstack/react-start": "^1.120.15",
@@ -20,6 +22,7 @@
     "redaxios": "^0.5.1",
     "server": "workspace:*",
     "tailwind-merge": "^2.6.0",
+    "tw-animate-css": "^1.3.4",
     "vinxi": "0.5.3",
     "zod": "^3.25.56"
   },
@@ -30,7 +33,7 @@
     "@types/react-dom": "^19.0.3",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.5.1",
-    "tailwindcss": "^3.4.17",
+    "tailwindcss": "^4.1.8",
     "typescript": "^5.7.2",
     "vite-tsconfig-paths": "^5.1.4"
   }
