--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -37,10 +37,14 @@
     "@radix-ui/react-tooltip": "^1.2.7",
     "@t3-oss/env-core": "^0.13.6",
     "@tailwindcss/postcss": "^4.1.8",
+    "@tanstack/react-query": "^5.80.6",
+    "@tanstack/react-query-devtools": "^5.80.6",
     "@tanstack/react-router": "^1.120.15",
     "@tanstack/react-router-devtools": "^1.120.15",
     "@tanstack/react-start": "^1.120.15",
     "better-auth": "^1.2.8",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "hono": "^4.7.4",
     "input-otp": "^1.4.2",
     "next-themes": "^0.4.6",
