--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -21,6 +21,7 @@
     "better-sqlite3": "^11.8.1",
     "drizzle-orm": "^0.40.0",
     "drizzle-zod": "^0.8.2",
+    "effect": "^3.16.5",
     "hono": "^4.7.4",
     "zod": "^3.25.56"
   },
