--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -3,12 +3,13 @@
   "types": "./src/types.ts",
   "scripts": {
     "dev": "wrangler dev",
-    "deploy": "wrangler deploy --minify",
+    "deploy": "npm run db:migrations:apply && wrangler deploy --minify",
     "typecheck": "tsc --noEmit",
     "cf-typegen": "wrangler types --env-interface CloudflareBindings",
     "db:generate": "drizzle-kit generate --name",
     "db:migrate:dev": "wrangler d1 migrations apply mixer-exp --local",
     "db:migrate:prod": "wrangler d1 migrations apply mixer-exp --remote",
+    "db:migrations:apply": "wrangler d1 migrations apply DB --remote",
     "db:local:drop": "drizzle-kit drop",
     "db:local:studio": "drizzle-kit studio",
     "auth:generate": "pnpx @better-auth/cli generate --config auth.config.ts --output src/db/auth-schema.ts"
