--- a/apps/server/wrangler.jsonc
+++ b/apps/server/wrangler.jsonc
@@ -19,12 +19,15 @@
       "migrations_dir": "src/db/migrations",
     },
   ],
-  "routes": [
-    {
-      "pattern": "api.f-stack.dev",
-      "custom_domain": true,
-    },
-  ],
+  /**
+   * Routes - Uncomment and configure after deployment
+   * "routes": [
+   *   {
+   *     "pattern": "api.yourdomain.com",
+   *     "custom_domain": true,
+   *   },
+   * ],
+   */
   /**
    * Smart Placement
    * Docs: https://developers.cloudflare.com/workers/configuration/smart-placement/#smart-placement
